--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
     <footer>
         [ Punto Cero - Protocolo Delta Activo ]
     </footer>
+<h2>Secciones</h2>
 
+<ul>
+  <li><a href="damas/">Borradores</a></li>
+  <li><a href="notas/">Notas</a></li>
+  <li><a href="látex/">LaTeX</a></li>
+  <li><a href="preimpresiones/">Preprints</a></li>
+</ul>
 </body>
 </html>
