--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@
             </a>
         </div>
     </div>
-
+<a href="academica/">[ Académica ]</a>
+<a href="ficcion/">[ Epsilon Ficción ]</a>
+<a href="cv/">[ Currículum Vitae ]</a>
+<a href="curanderia/">[ Curandería & Vintage ]</a>
+<a href="research/">[ Research ]</a>
     <footer>
         [ Punto Cero - Protocolo Delta Activo ]
     </footer>
