--- a/index.html
+++ b/index.html
@@ -2,81 +2,31 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Epsilon Noir</title>
 
-    <style>
-        body {
-            margin: 0;
-            background-color: #000000;
-            color: #00ff66;
-            font-family: "Courier New", Courier, monospace;
-        }
-
-        .container {
-            max-width: 1000px;
-            margin: 0 auto;
-            padding: 60px 20px;
-            text-align: center;
-        }
-
-        h1 {
-            font-size: 3em;
-            margin-bottom: 10px;
-        }
-
-        .subtitle {
-            color: #008f3a;
-            margin-bottom: 60px;
-        }
-
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 30px;
-        }
-
-        .card {
-            border: 1px solid #00ff66;
-            padding: 30px;
-            text-decoration: none;
-            color: #00ff66;
-            transition: 0.3s;
-        }
-
-        .card:hover {
-            background-color: #001a0d;
-            box-shadow: 0 0 15px #00ff66;
-        }
-
-        .card h2 {
-            margin-top: 0;
-        }
-
-        footer {
-            margin-top: 80px;
-            font-size: 0.8em;
-            color: #006622;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-<div class="container">
+<main class="container">
 
     <h1>EPSILON NOIR</h1>
-    <div class="subtitle">Archivo personal · Investigación · Ficción · Curaduría</div>
+    <div class="subtitle">
+        Archivo personal · Investigación · Ficción · Curaduría
+    </div>
 
     <div class="grid">
 
         <a href="academica/" class="card">
             <h2>Académica</h2>
-            <p>Artículos maquetados, ensayos, investigación formal.</p>
+            <p>Artículos maquetados, ensayos e investigación formal.</p>
         </a>
 
         <a href="ficcion/" class="card">
             <h2>Escritura Creativa</h2>
-            <p>Relatos, cuentos, Wattpad, Amazon KDP, portadas.</p>
+            <p>Relatos, cuentos, Wattpad, Amazon KDP y portadas.</p>
         </a>
 
         <a href="cv/" class="card">
@@ -86,12 +36,12 @@
 
         <a href="curanderia/" class="card">
             <h2>Curandería & Vintage</h2>
-            <p>Libros raros, cómics, mangas, piezas y fotografías.</p>
+            <p>Libros raros, cómics, mangas, piezas y fotografía.</p>
         </a>
 
         <a href="research/" class="card">
             <h2>Research</h2>
-            <p>Notas, preprints, LaTeX y borradores en desarrollo.</p>
+            <p>Notas, preprints, LaTeX y desarrollos en proceso.</p>
         </a>
 
     </div>
@@ -100,76 +50,7 @@
         © 2026 Epsilon Noir — Sistema en expansión.
     </footer>
 
-</div>
+</main>
 
-</body>
-</html>        }
-        .card {
-            border: 1px solid #333;
-            padding: 20px;
-            transition: 0.3s;
-            cursor: pointer;
-            text-decoration: none;
-            color: inherit;
-        }
-        .card:hover {
-            border-color: var(--accent);
-            background: #111;
-        }
-        .card h2 { font-size: 1.2rem; margin-top: 0; }
-        .card p { font-size: 0.9rem; color: var(--secondary); }
-
-        footer { margin-top: 50px; font-size: 0.8rem; color: #444; }
-    </style>
-</head>
-<body>
-
-    <div class="container">
-        <h1>CARLOS MANZO | EPSILON</h1>
-        <p class="subtitle">Convergencia de Sistemas: Lógica, Estructura y Metaficción</p>
-
-        <div class="grid">
-            <a href="#" class="card">
-                <h2>Carlos Manzo: Academia</h2>
-                <p>Auditoría Lógica, Edición Técnica y Maquetación en LaTeX.</p>
-            </a>
-
-            <a href="#" class="card">
-                <h2>Epsilon: Ficción</h2>
-                <p>Hard Sci-Fi, Metaficción y Terror. Mundos en Amazon y Royal Road.</p>
-            </a>
-
-            <a href="#" class="card">
-                <h2>Tutorías Lógicas</h2>
-                <p>Resolución de problemas y maquetación de tareas (Bachillerato/Superior).</p>
-            </a>
-
-            <a href="#" class="card">
-                <h2>Curaduría & Vintage</h2>
-                <p>Cómics, Manga y Videojuegos raros (Frontera Laredo).</p>
-            </a>
-
-            <a href="#" class="card">
-                <h2>Currículum Vitae</h2>
-                <p>Trayectoria profesional y académica unificada.</p>
-            </a>
-        </div>
-    </div>
-<a href="academica/">[ Académica ]</a>
-<a href="ficcion/">[ Epsilon Ficción ]</a>
-<a href="cv/">[ Currículum Vitae ]</a>
-<a href="curanderia/">[ Curandería & Vintage ]</a>
-<a href="research/">[ Research ]</a>
-    <footer>
-        [ Punto Cero - Protocolo Delta Activo ]
-    </footer>
-<h2>Secciones</h2>
-
-<ul>
-  <li><a href="damas/">Borradores</a></li>
-  <li><a href="notas/">Notas</a></li>
-  <li><a href="látex/">LaTeX</a></li>
-  <li><a href="preimpresiones/">Preprints</a></li>
-</ul>
 </body>
 </html>
