--- a/index.html
+++ b/index.html
@@ -1,56 +1,110 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Epsilon Noir</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Epsilon Noir</title>
 
-    <link rel="stylesheet" href="styles.css">
+<style>
+body {
+    margin: 0;
+    background-color: #000000;
+    color: #ffffff;
+    font-family: "Courier New", Courier, monospace;
+    text-align: center;
+}
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 60px 20px;
+}
+
+h1 {
+    color: #00ff99;
+    font-size: 3em;
+    margin-bottom: 10px;
+    letter-spacing: 3px;
+}
+
+.subtitle {
+    color: #888888;
+    margin-bottom: 60px;
+    font-size: 1.1em;
+}
+
+.card {
+    border: 1px solid #333333;
+    padding: 40px;
+    margin-bottom: 40px;
+    text-decoration: none;
+    display: block;
+    color: #ffffff;
+    transition: 0.3s;
+}
+
+.card h2 {
+    margin-top: 0;
+    color: #ffffff;
+}
+
+.card p {
+    color: #aaaaaa;
+}
+
+.card:hover {
+    border-color: #00ff99;
+    box-shadow: 0 0 10px #00ff99;
+}
+
+footer {
+    margin-top: 80px;
+    font-size: 0.8em;
+    color: #555555;
+}
+</style>
+
 </head>
 
 <body>
 
-<main class="container">
+<div class="container">
 
-    <h1>EPSILON NOIR</h1>
-    <div class="subtitle">
-        Archivo personal · Investigación · Ficción · Curaduría
-    </div>
+<h1>CARLOS MANZO | EPSILON</h1>
+<div class="subtitle">
+Convergencia de Sistemas: Lógica, Estructura y Metaficción
+</div>
 
-    <div class="grid">
+<a href="academica/" class="card">
+    <h2>Carlos Manzo: Academia</h2>
+    <p>Auditoría Lógica, Edición Técnica y Maquetación en LaTeX.</p>
+</a>
 
-        <a href="academica/" class="card">
-            <h2>Académica</h2>
-            <p>Artículos maquetados, ensayos e investigación formal.</p>
-        </a>
+<a href="ficcion/" class="card">
+    <h2>Epsilon: Ficción</h2>
+    <p>Hard Sci-Fi, Metaficción y Terror. Mundo en Amazon y Royal Road.</p>
+</a>
 
-        <a href="ficcion/" class="card">
-            <h2>Escritura Creativa</h2>
-            <p>Relatos, cuentos, Wattpad, Amazon KDP y portadas.</p>
-        </a>
+<a href="tutorias/" class="card">
+    <h2>Tutorías Lógicas</h2>
+    <p>Resolución de problemas y maquetación académica.</p>
+</a>
 
-        <a href="cv/" class="card">
-            <h2>Currículum Vitae</h2>
-            <p>CV en línea y trayectoria académica.</p>
-        </a>
+<a href="curanderia/" class="card">
+    <h2>Curaduría & Vintage</h2>
+    <p>Cómics, Manga y Videojuegos raros (Frontera Laredo).</p>
+</a>
 
-        <a href="curanderia/" class="card">
-            <h2>Curandería & Vintage</h2>
-            <p>Libros raros, cómics, mangas, piezas y fotografía.</p>
-        </a>
+<a href="research/" class="card">
+    <h2>Research / Investigaciones</h2>
+    <p>Notas, preprints, desarrollos formales y trabajo en proceso.</p>
+</a>
 
-        <a href="research/" class="card">
-            <h2>Research</h2>
-            <p>Notas, preprints, LaTeX y desarrollos en proceso.</p>
-        </a>
+<footer>
+© 2026 Epsilon Noir — Sistema en expansión.
+</footer>
 
-    </div>
-
-    <footer>
-        © 2026 Epsilon Noir — Sistema en expansión.
-    </footer>
-
-</main>
+</div>
 
 </body>
-</html>
+                                                                    </html>
