--- a/index.html
+++ b/index.html
@@ -17,35 +17,36 @@ body {
 .container {
     max-width: 800px;
     margin: 0 auto;
-    padding: 60px 20px;
+    padding: 80px 20px;
 }
 
 h1 {
-    color: #00ff99;
+    color: #00ffaa;
     font-size: 3em;
-    margin-bottom: 10px;
-    letter-spacing: 3px;
+    margin-bottom: 15px;
+    letter-spacing: 4px;
 }
 
 .subtitle {
-    color: #888888;
-    margin-bottom: 60px;
+    color: #777777;
+    margin-bottom: 70px;
     font-size: 1.1em;
 }
 
 .card {
     border: 1px solid #333333;
-    padding: 40px;
-    margin-bottom: 40px;
+    padding: 45px 30px;
+    margin-bottom: 45px;
     text-decoration: none;
     display: block;
     color: #ffffff;
-    transition: 0.3s;
+    transition: 0.3s ease;
 }
 
 .card h2 {
     margin-top: 0;
-    color: #ffffff;
+    font-weight: normal;
+    letter-spacing: 1px;
 }
 
 .card p {
@@ -53,12 +54,12 @@ h1 {
 }
 
 .card:hover {
-    border-color: #00ff99;
-    box-shadow: 0 0 10px #00ff99;
+    border-color: #00ffaa;
+    box-shadow: 0 0 12px #00ffaa;
 }
 
 footer {
-    margin-top: 80px;
+    margin-top: 100px;
     font-size: 0.8em;
     color: #555555;
 }
@@ -71,33 +72,39 @@ footer {
 <div class="container">
 
 <h1>CARLOS MANZO | EPSILON</h1>
+
 <div class="subtitle">
 Convergencia de Sistemas: Lógica, Estructura y Metaficción
 </div>
 
-<a href="academica/" class="card">
+<a href="./academica/" class="card">
     <h2>Carlos Manzo: Academia</h2>
-    <p>Auditoría Lógica, Edición Técnica y Maquetación en LaTeX.</p>
+    <p>Auditoría lógica, edición técnica y maquetación en LaTeX.</p>
 </a>
 
-<a href="ficcion/" class="card">
+<a href="./ficcion/" class="card">
     <h2>Epsilon: Ficción</h2>
-    <p>Hard Sci-Fi, Metaficción y Terror. Mundo en Amazon y Royal Road.</p>
+    <p>Hard Sci-Fi, metaficción y terror. Mundo en Amazon y Royal Road.</p>
 </a>
 
-<a href="tutorias/" class="card">
+<a href="./tutorias/" class="card">
     <h2>Tutorías Lógicas</h2>
     <p>Resolución de problemas y maquetación académica.</p>
 </a>
 
-<a href="curanderia/" class="card">
+<a href="./curanderia/" class="card">
     <h2>Curaduría & Vintage</h2>
-    <p>Cómics, Manga y Videojuegos raros (Frontera Laredo).</p>
+    <p>Cómics, manga y videojuegos raros.</p>
 </a>
 
-<a href="research/" class="card">
-    <h2>Research / Investigaciones</h2>
+<a href="./research/" class="card">
+    <h2>Investigaciones</h2>
     <p>Notas, preprints, desarrollos formales y trabajo en proceso.</p>
+</a>
+
+<a href="./cv/" class="card">
+    <h2>Currículum Vitae</h2>
+    <p>Trayectoria profesional y académica unificada.</p>
 </a>
 
 <footer>
@@ -107,4 +114,5 @@ Convergencia de Sistemas: Lógica, Estructura y Metaficción
 </div>
 
 </body>
+</html>
                                                                     </html>
