--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@ h1 {
     font-size: 3em;
     margin-bottom: 15px;
     letter-spacing: 4px;
+    /* Corrección para centrado perfecto */
+    text-align: center;
+    padding-right: 4px; /* Compensa el letter-spacing final */
 }
 
 .subtitle {
@@ -114,5 +117,5 @@ Convergencia de Sistemas: Lógica, Estructura y Metaficción
 </div>
 
 </body>
-</html>
+                                                         </html>
                                                                     </html>
