--- a/academica/academica/academica/index.html
+++ b/academica/academica/academica/index.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Academia | Epsilon Noir</title>
+<link rel="stylesheet" href="../style.css">
+</head>
 
+<body>
+
+<div class="container">
+
+<h1>CARLOS MANZO: ACADEMIA</h1>
+
+<div class="subtitle">
+Auditoría lógica, edición técnica y maquetación en LaTeX
+</div>
+
+<div class="content-list">
+
+    <!-- AQUÍ AGREGAS TUS PDFs -->
+    <!-- Ejemplo: Copia este bloque para cada artículo que subas -->
+<div class="content-item">
+    <h3></h3>
+    <p> Breve historia sobre las lógicas clásicas y no clásicas y qué puntos y acción más son semejantes, así como en los que son mutuamente excluyentes..</p>
+    <p><strong>Año:</strong> 2026 | <strong>Tipo:</strong> Artículo</p>
+    <a href="logica-modal-2026.pdf" target="_blank">→ Descargar PDF</a>
+</div>
+
+  
+    <div class="content-item">
+        <h3>Título de tu artículo</h3>
+        <p>Descripción breve de qué trata el artículo.</p>
+        <p><strong>Año:</strong> 2026 | <strong>Tipo:</strong> Artículo</p>
+        <a href="nombre-del-archivo.pdf" target="_blank">→ Descargar PDF</a>
+    </div>
+
+    <!-- Para agregar MÁS artículos, copia el bloque de arriba y pégalo debajo -->
+
+</div>
+
+<a href="../" class="back-link">← Volver al inicio</a>
+
+<footer>
+© 2026 Epsilon Noir — Academia
+</footer>
+
+</div>
+
+</body>
+</html>
