--- a/academica/academica/academica/index.html
+++ b/academica/academica/academica/index.html
@@ -19,24 +19,25 @@ Auditoría lógica, edición técnica y maquetación en LaTeX
 
 <div class="content-list">
 
-    <!-- AQUÍ AGREGAS TUS PDFs -->
-    <!-- Ejemplo: Copia este bloque para cada artículo que subas -->
-<div class="content-item">
-    <h3></h3>
-    <p> Breve historia sobre las lógicas clásicas y no clásicas y qué puntos y acción más son semejantes, así como en los que son mutuamente excluyentes..</p>
-    <p><strong>Año:</strong> 2026 | <strong>Tipo:</strong> Artículo</p>
-    <a href="logica-modal-2026.pdf" target="_blank">→ Descargar PDF</a>
-</div>
-
-  
+    <!-- ARTÍCULO 1 -->
     <div class="content-item">
-        <h3>Título de tu artículo</h3>
-        <p>Descripción breve de qué trata el artículo.</p>
-        <p><strong>Año:</strong> 2026 | <strong>Tipo:</strong> Artículo</p>
-        <a href="nombre-del-archivo.pdf" target="_blank">→ Descargar PDF</a>
+        <h3>Divergencia y Convergencia: Lógicas Clásicas y No Clásicas</h3>
+        <p>Análisis de la convergencia y divergencia entre la lógica clásica y diversas lógicas no clásicas (intuicionista, paraconsistente, difusa y modal). Explora los fundamentos teóricos de cada enfoque y su aplicabilidad en matemáticas, filosofía y computación.</p>
+        <p><strong>Año:</strong> 2025 | <strong>Tipo:</strong> Investigación</p>
+        <a href="Divergencia_y_Convergencia_Lógicas_clásicas_y_no_clásicas.pdf" target="_blank">→ Descargar PDF</a>
     </div>
 
-    <!-- Para agregar MÁS artículos, copia el bloque de arriba y pégalo debajo -->
+    <!-- PLANTILLA PARA AGREGAR MÁS ARTÍCULOS -->
+    <!-- Copia desde aquí -->
+    <!--
+    <div class="content-item">
+        <h3>Título del siguiente artículo</h3>
+        <p>Descripción breve.</p>
+        <p><strong>Año:</strong> 2026 | <strong>Tipo:</strong> Artículo</p>
+        <a href="nombre-exacto-del-archivo.pdf" target="_blank">→ Descargar PDF</a>
+    </div>
+    -->
+    <!-- Hasta aquí -->
 
 </div>
 
