--- a/academica/academica/academica/index.html
+++ b/academica/academica/academica/index.html
@@ -22,7 +22,7 @@ Auditoría lógica, edición técnica y maquetación en LaTeX
     <!-- ARTÍCULO 1 -->
     <div class="content-item">
         <h3>Divergencia y Convergencia: Lógicas Clásicas y No Clásicas</h3>
-        <p>Análisis de la convergencia y divergencia entre la lógica clásica y diversas lógicas no clásicas (intuicionista, paraconsistente, difusa y modal). Explora los fundamentos teóricos de cada enfoque y su aplicabilidad en matemáticas, filosofía y computación.</p>
+        <p>Análisis de la convergencia y divergencia entre la lógica clásica y algunas lógicas no clásicas (intuicionista, paraconsistente, difusa y modal). Explora los fundamentos teóricos de cada enfoque y su aplicabilidad en matemáticas, filosofía y computación.</p>
         <p><strong>Año:</strong> 2025 | <strong>Tipo:</strong> Investigación</p>
         <a href="Divergencia_y_Convergencia_Lógicas_clásicas_y_no_clásicas.pdf" target="_blank">→ Descargar PDF</a>
     </div>
