--- a/cv/index.html
+++ b/cv/index.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Currículum Vitae | Epsilon Noir</title>
+<link rel="stylesheet" href="../style.css">
+</head>
 
+<body>
+
+<div class="container">
+
+<h1>CURRÍCULUM VITAE</h1>
+
+<div class="subtitle">
+Carlos A. Manzo (Epsilon) — Escritor técnico, Ghostwriter & Auditor lógico
+</div>
+
+<div class="content-list">
+
+    <div class="content-item">
+        <h3>CV Completo (PDF)</h3>
+        <p>Perfil profesional especializado en LaTeX, edición científica, ghostwriting y auditoría lógica. Experiencia en redacción académica, tutor independiente y escritor técnico.</p>
+        <p><strong>Última actualización:</strong> 2025 | <strong>Formato:</strong> PDF</p>
+        <a href="CV_Carlos_Manzo_updated.pdf" target="_blank">→ Descargar CV</a>
+    </div>
+
+    <div class="content-item">
+        <h3>Contacto</h3>
+        <p><strong>Email:</strong> cm33501@gmail.com</p>
+        <p><strong>Ubicación:</strong> Nuevo Laredo, México</p>
+        <p><strong>Disponibilidad:</strong> Trabajo remoto asíncrono</p>
+    </div>
+
+    <div class="content-item">
+        <h3>Áreas de especialización</h3>
+        <p>• Ghostwriting y escritura creativa estructural<br>
+        • Redacción académica y edición (APA 7ª ed.)<br>
+        • Auditoría lógica y coherencia argumental<br>
+        • Maquetación en LaTeX (Overleaf) y Amazon KDP<br>
+        • Tutoría: Álgebra, Cálculo, Teoría de Conjuntos, Lógica</p>
+    </div>
+
+</div>
+
+<a href="../" class="back-link">← Volver al inicio</a>
+
+<footer>
+© 2026 Epsilon Noir — CV
+</footer>
+
+</div>
+
+</body>
+</html>
