--- a/academica/index.html
+++ b/academica/index.html
@@ -27,6 +27,15 @@ Auditoría lógica, edición técnica y maquetación en LaTeX
         <a href="Divergencia_y_Convergencia_Lógicas_clásicas_y_no_clásicas.pdf" target="_blank">→ Descargar PDF</a>
     </div>
 
+
+    
+<div class="content-item">
+    <h3>Matemáticas Simplificadas en Lenguaje Natural (MSLN)</h3>
+    <p>Libro completo maquetado en LaTeX explorando fundamentos matemáticos expresados en lenguaje natural. Cubre teoría de conjuntos, lógicas no clásicas, metamatemática, correspondencia Curry-Howard y tipos dependientes. Diseñado para máxima accesibilidad auditiva (TTS/audiolibros).</p>
+    <p><strong>Año:</strong> 2025 | <strong>Páginas:</strong> 138 | <strong>Tipo:</strong> Libro técnico</p>
+    <a href="MSLN__1_.pdf" target="_blank">→ Descargar PDF</a>
+</div>
+
     <!-- PLANTILLA PARA AGREGAR MÁS ARTÍCULOS -->
     <!-- Copia desde aquí cuando quieras agregar otro artículo -->
     <!--
