--- a/research/index.html
+++ b/research/index.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>research | Epsilon Noir</title>
+<link rel="stylesheet" href="../style.css">
+</head>
 
+<body>
+
+<div class="container">
+
+<h1>research</h1>
+
+<div class="subtitle">
+Carlos A. Manzo (Epsilon) — Escritor técnico, Ghostwriter & Auditor lógico
+</div>
+
+<div class="content-list">
+
+    <div class="content-item">
+    <h3>Proyecto LSSU: Lógica Sintáctico-Categórica Unificadora</h3>
+    <p>Marco de investigación para integrar sintaxis deductiva, estructura categórica y semántica interna. Explora la unificación de teoría de tipos, teoría de categorías y teoría de la demostración en un único marco formal. Documentado en el proyecto MSLN (capítulo [PRIVATE]).</p>
+    <p><strong>Estado:</strong> Investigación activa | <strong>Área:</strong> Fundamentos matemáticos</p>
+    <a href="MSLN__1_.pdf" target="_blank">→ Ver documento completo</a>
+</div>
+
+<div class="content-item">
+    <h3>Matemáticas en Lenguaje Natural: Accesibilidad y Rigor</h3>
+    <p>Investigación sobre expresión de matemáticas formales en lenguaje natural sin pérdida de precisión. Desarrolla convenciones prosódicas, plantillas de lectura y workflows para sistemas TTS. Aplicaciones en educación accesible y divulgación técnica.</p>
+    <p><strong>Año:</strong> 2025 | <strong>Formato:</strong> Preprint</p>
+    <a href="MSLN__1_.pdf" target="_blank">→ Leer preprint</a>
+</div>
+  
+    <div class="content-item">
+        <h3>Áreas de especialización</h3>
+        <p>• Ghostwriting y escritura creativa estructural<br>
+        • Redacción académica y edición (APA 7ª ed.)<br>
+        • Auditoría lógica y coherencia argumental<br>
+        • Maquetación en LaTeX (Overleaf) y Amazon KDP<br>
+        • Tutoría: Álgebra, Cálculo, Teoría de Conjuntos, Lógica</p>
+    </div>
+
+</div>
+
+<a href="../" class="back-link">← Volver al inicio</a>
+
+<footer>
+© 2026 Epsilon Noir — CV
+</footer>
+
+</div>
+
+</body>
+  </html>
