--- a/ficcion/index.html
+++ b/ficcion/index.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title> Ciencia ficción, metaficción y terror | Epsilon Noir</title>
+<link rel="stylesheet" href="../style.css">
+</head>
 
+<body>
+
+<div class="container">
+
+<h1>CIENCIA FICCIÓN,  METAFISICCIÓN Y TERROR</h1>
+
+<div class="subtitle">
+Carlos A. Manzo (Epsilon) — Escritor creativo, Ghostwriter & Auditor lógico
+</div>
+
+<div class="content-list">
+<div class="content-item">
+    <h3>Publicaciones en Amazon KDP</h3>
+    <p>Ficción especulativa, sci-fi y terror publicados en Amazon.</p>
+    <a href="https://kdp.amazon.com/es_ES/bookshelf?ref_=kdp_kdp_TAC_TN_bs" target="_blank">→ Ver en Amazon</a>
+</div>
+
+  <div class="content-item">
+    <h3>Historias en Royal Road</h3>
+    <p>Borradores y trabajos en progreso.</p>
+    <a href="https://www.royalroad.com/author-dashboard" target="_blank">→ Leer en Wattpad</a>
+  </div>
+
+<div class="content-item">
+    <h3>Historias en Wattpad</h3>
+    <p>Borradores y trabajos en progreso.</p>
+    <a href="https://www.wattpad.com/story/355281001?utm_source=android&utm_medium=link&utm_content=story_info&wp_page=story_details_button" target="_blank">→ Leer en Wattpad</a>
+</div>
+
+  <div class="content-item">
+    <h3>Historias en Wattpad</h3>
+    <p>Borradores y trabajos en progreso.</p>
+    <a href="https://www.wattpad.com/story/339828268?utm_source=android&utm_medium=link&utm_content=story_info&wp_page=story_details_buttonn" target="_blank">→ Leer en Wattpad</a>
+  </div>
+
+
+  <div class="content-item">
+    <h3>Historias en Wattpad</h3>
+    <p>Borradores y trabajos en progreso.</p>
+    <a href="https://www.wattpad.com/story/354658300?utm_source=android&utm_medium=link&utm_content=story_info&wp_page=story_details_buttonn" target="_blank">→ Leer en Wattpad</a>
+  </div>
+
+    <div class="content-item">
+        <h3>Áreas de especialización</h3>
+        <p>• Ghostwriting y escritura creativa estructural<br>
+        • Redacción académica y edición (APA 7ª ed.)<br>
+        • Auditoría lógica y coherencia argumental<br>
+        • Maquetación en LaTeX (Overleaf) y Amazon KDP<br>
+        • Tutoría: Álgebra, Cálculo, Teoría de Conjuntos, Lógica</p>
+    </div>
+
+</div>
+
+<a href="../" class="back-link">← Volver al inicio</a>
+
+<footer>
+© 2026 Epsilon Noir — CV
+</footer>
+
+</div>
+
+</body>
+  </html>
