--- a/ficcion/index.html
+++ b/ficcion/index.html
@@ -21,13 +21,13 @@ Carlos A. Manzo (Epsilon) — Escritor creativo, Ghostwriter & Auditor lógico
 <div class="content-item">
     <h3>Publicaciones en Amazon KDP</h3>
     <p>Ficción especulativa, sci-fi y terror publicados en Amazon.</p>
-    <a href="https://kdp.amazon.com/es_ES/bookshelf?ref_=kdp_kdp_TAC_TN_bs" target="_blank">→ Ver en Amazon</a>
+    <a href="https://www.amazon.ca/Cuentos-Locura-Amor-Muerte-Inolvidables-ebook/dp/B0BYGR7J78" target="_blank">→ Ver en Amazon</a>
 </div>
 
   <div class="content-item">
     <h3>Historias en Royal Road</h3>
     <p>Borradores y trabajos en progreso.</p>
-    <a href="https://www.royalroad.com/author-dashboard" target="_blank">→ Leer en Wattpad</a>
+    <a href="https://www.royalroad.com/author-dashboard" target="_blank">→ Leer en Royal Road</a>
   </div>
 
 <div class="content-item">
