--- a/ficcion/index.html
+++ b/ficcion/index.html
@@ -11,7 +11,7 @@
 
 <div class="container">
 
-<h1>CIENCIA FICCIÓN,  METAFISICCIÓN Y TERROR</h1>
+<h1>CIENCIA FICCIÓN,  METAFICCIÓN Y TERROR</h1>
 
 <div class="subtitle">
 Carlos A. Manzo (Epsilon) — Escritor creativo, Ghostwriter & Auditor lógico
