--- a/ficcion/index.html
+++ b/ficcion/index.html
@@ -27,7 +27,7 @@ Carlos A. Manzo (Epsilon) — Escritor creativo, Ghostwriter & Auditor lógico
   <div class="content-item">
     <h3>Historias en Royal Road</h3>
     <p>Borradores y trabajos en progreso.</p>
-    <a href="https://www.royalroad.com/author-dashboard" target="_blank">→ Leer en Royal Road</a>
+    <a href="https://www.royalroad.com/profile/912513" target="_blank">→ Leer en Royal Road</a>
   </div>
 
 <div class="content-item">
