--- a/ficcion/index.html
+++ b/ficcion/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="es">
 <head>
 <meta charset="UTF-8">
@@ -69,4 +69,4 @@ Carlos A. Manzo (Epsilon) — Escritor creativo, Ghostwriter & Auditor lógico
 </div>
 
 </body>
-  </html>
+</html>
