--- a/ficcion/index.html
+++ b/ficcion/index.html
@@ -31,21 +31,21 @@ Carlos A. Manzo (Epsilon) — Escritor creativo, Ghostwriter & Auditor lógico
   </div>
 
 <div class="content-item">
-    <h3>Historias en Wattpad</h3>
-    <p>Borradores y trabajos en progreso.</p>
+    <h3>Colección de Ciencia Ficción</h3>
+    <p>En la frontera  del conocimiento...</p>
     <a href="https://www.wattpad.com/story/355281001?utm_source=android&utm_medium=link&utm_content=story_info&wp_page=story_details_button" target="_blank">→ Leer en Wattpad</a>
 </div>
 
   <div class="content-item">
-    <h3>Historias en Wattpad</h3>
-    <p>Borradores y trabajos en progreso.</p>
+    <h3>Colección de Metaficción</h3>
+    <p>En las fronteras de la realidad...</p>
     <a href="https://www.wattpad.com/story/339828268?utm_source=android&utm_medium=link&utm_content=story_info&wp_page=story_details_buttonn" target="_blank">→ Leer en Wattpad</a>
   </div>
 
 
   <div class="content-item">
-    <h3>Historias en Wattpad</h3>
-    <p>Borradores y trabajos en progreso.</p>
+    <h3>Colección de terror</h3>
+    <p>Historias de lo inexplicable...</p>
     <a href="https://www.wattpad.com/story/354658300?utm_source=android&utm_medium=link&utm_content=story_info&wp_page=story_details_buttonn" target="_blank">→ Leer en Wattpad</a>
   </div>
 
