--- a/ficcion/index.html
+++ b/ficcion/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
 <meta charset="UTF-8">
@@ -14,7 +14,7 @@
 <h1>CIENCIA FICCIÓN,  METAFICCIÓN Y TERROR</h1>
 
 <div class="subtitle">
-Carlos A. Manzo (Epsilon) — Escritor creativo, Ghostwriter & Auditor lógico
+Epsilon — Escritor creativo, Ghostwriter & Auditor lógico
 </div>
 
 <div class="content-list">
