--- a/ficcion/index.html
+++ b/ficcion/index.html
@@ -50,12 +50,15 @@ Epsilon — Escritor creativo, Ghostwriter & Auditor lógico
   </div>
 
     <div class="content-item">
-        <h3>Áreas de especialización</h3>
-        <p>• Ghostwriting y escritura creativa estructural<br>
-        • Redacción académica y edición (APA 7ª ed.)<br>
-        • Auditoría lógica y coherencia argumental<br>
-        • Maquetación en LaTeX (Overleaf) y Amazon KDP<br>
-        • Tutoría: Álgebra, Cálculo, Teoría de Conjuntos, Lógica</p>
+    <h3>Líneas de exploración narrativa</h3>
+    <p>
+      • Ciencia ficción estructurada con fundamentos conceptuales sólidos y especulación disciplinada.<br>
+      • Metaficción como laboratorio ontológico del relato y del yo narrativo.<br>
+      • Terror como disección del miedo: psicológico, sobrenatural y liminal.<br>
+      • Construcción de tramas y subtramas orgánicas con progresión coherente del conflicto.<br>
+      • Desarrollo de personajes con motivaciones internas consistentes.<br>
+      • Experimentación no lineal y fusión de géneros.
+    </p>
     </div>
 
 </div>
