--- a/cv/index.html
+++ b/cv/index.html
@@ -23,7 +23,7 @@ Carlos A. Manzo (Epsilon) — Escritor técnico, Ghostwriter & Auditor lógico
         <h3>CV Completo (PDF)</h3>
         <p>Perfil profesional especializado en LaTeX, edición científica, ghostwriting y auditoría lógica. Experiencia en redacción académica, tutor independiente y escritor técnico.</p>
         <p><strong>Última actualización:</strong> 2025 | <strong>Formato:</strong> PDF</p>
-        <a href="CV_Carlos_Manzo_updated.pdf" target="_blank">→ Descargar CV</a>
+        <a href="CV_Carlos_Manzo.pdf" target="_blank">→ Descargar CV</a>
     </div>
 
     <div class="content-item">
