--- a/research/index.html
+++ b/research/index.html
@@ -23,14 +23,14 @@ Carlos A. Manzo (Epsilon) — Escritor técnico, Ghostwriter & Auditor lógico
     <h3>Proyecto LSSU: Lógica Sintáctico-Categórica Unificadora</h3>
     <p>Marco de investigación para integrar sintaxis deductiva, estructura categórica y semántica interna. Explora la unificación de teoría de tipos, teoría de categorías y teoría de la demostración en un único marco formal. Documentado en el proyecto MSLN (capítulo [PRIVATE]).</p>
     <p><strong>Estado:</strong> Investigación activa | <strong>Área:</strong> Fundamentos matemáticos</p>
-    <a href="MSLN__1_.pdf" target="_blank">→ Ver documento completo</a>
+    <a href="MSLN (1).pdf" target="_blank">→ Ver documento completo</a>
 </div>
 
 <div class="content-item">
     <h3>Matemáticas en Lenguaje Natural: Accesibilidad y Rigor</h3>
     <p>Investigación sobre expresión de matemáticas formales en lenguaje natural sin pérdida de precisión. Desarrolla convenciones prosódicas, plantillas de lectura y workflows para sistemas TTS. Aplicaciones en educación accesible y divulgación técnica.</p>
     <p><strong>Año:</strong> 2025 | <strong>Formato:</strong> Preprint</p>
-    <a href="MSLN__1_.pdf" target="_blank">→ Leer preprint</a>
+    <a href="MSLN (1).pdf" target="_blank">→ Leer preprint</a>
 </div>
   
     <div class="content-item">
