--- a/academica/index.html
+++ b/academica/index.html
@@ -24,7 +24,7 @@ Auditoría lógica, edición técnica y maquetación en LaTeX
         <h3>Divergencia y Convergencia: Lógicas Clásicas y No Clásicas</h3>
         <p>Análisis de la convergencia y divergencia entre la lógica clásica y diversas lógicas no clásicas (intuicionista, paraconsistente, difusa y modal). Explora los fundamentos teóricos de cada enfoque y su aplicabilidad en matemáticas, filosofía y computación.</p>
         <p><strong>Año:</strong> 2025 | <strong>Tipo:</strong> Investigación</p>
-        <a Divergencia y Convergencia Lógicas clásicas y no clásicas.pdf" target="_blank">→ Descargar PDF</a>
+        <a href="Divergencia_y_Convergencia.pdf" target="_blank">→ Descargar PDF</a>
     </div>
 
 
@@ -33,7 +33,7 @@ Auditoría lógica, edición técnica y maquetación en LaTeX
     <h3>Matemáticas Simplificadas en Lenguaje Natural (MSLN)</h3>
     <p>Libro completo maquetado en LaTeX explorando fundamentos matemáticos expresados en lenguaje natural. Cubre teoría de conjuntos, lógicas no clásicas, metamatemática, correspondencia Curry-Howard y tipos dependientes. Diseñado para máxima accesibilidad auditiva (TTS/audiolibros).</p>
     <p><strong>Año:</strong> 2025 | <strong>Páginas:</strong> 138 | <strong>Tipo:</strong> Libro técnico</p>
-    <a href="MSLN (1).pdf" target="_blank">→ Descargar PDF</a>
+    <a href="MSLN.pdf" target="_blank">→ Descargar PDF</a>
 </div>
 
     <!-- PLANTILLA PARA AGREGAR MÁS ARTÍCULOS -->
