--- a/curanderia/index.html
+++ b/curanderia/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Curanderia | Epsilon Noir</title>
+<link rel="stylesheet" href="../style.css">
+</head>
 
+<body>
+
+<div class="container">
+
+<h1>CURANDERIA</h1>
+
+<div class="subtitle">
+Epsilon — PROXIMAMENTE
+</div>
+
+<div class="content-list">
+
+
+    <div class="content-item">
+        <h3> PRÓXIMAMENTE</h3>
+        <p>• PRÓXIMAMENTE<br>
+        •  PRÓXIMAMENTE<br>
+  </div>
+
+</div>
+
+<a href="../" class="back-link">← Volver al inicio</a>
+
+<footer>
+© 2026 Epsilon Noir — CV
+</footer>
+
+</div>
+
+</body>
+  </html>
