--- a/curanderia/index.html
+++ b/curanderia/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Curanderia | Epsilon Noir</title>
+<title>Curandería | Epsilon Noir</title>
 <link rel="stylesheet" href="../style.css">
 </head>
 
@@ -11,30 +11,29 @@
 
 <div class="container">
 
-<h1>CURANDERIA</h1>
+<h1>CURANDERÍA</h1>
 
 <div class="subtitle">
-Epsilon — PROXIMAMENTE
+Epsilon — Colección Vintage y Tesoros Raros
 </div>
 
 <div class="content-list">
 
-
     <div class="content-item">
-        <h3> PRÓXIMAMENTE</h3>
-        <p>• PRÓXIMAMENTE<br>
-        •  PRÓXIMAMENTE<br>
-  </div>
+        <h3>PRÓXIMAMENTE</h3>
+        <p>Esta sección estará dedicada a cómics vintage, manga de colección, videojuegos raros y tesoros culturales únicos.</p>
+        <p>Contenido en preparación para próximas semanas.</p>
+    </div>
 
 </div>
 
 <a href="../" class="back-link">← Volver al inicio</a>
 
 <footer>
-© 2026 Epsilon Noir — CV
+© 2026 Epsilon Noir — Curandería
 </footer>
 
 </div>
 
 </body>
-  </html>
+</html>
