--- a/tutorias/index.html
+++ b/tutorias/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Tutorías | Epsilon Noir</title>
+<link rel="stylesheet" href="../style.css">
+</head>
 
+<body>
+
+<div class="container">
+
+<h1>TUTORÍAS</h1>
+
+<div class="subtitle">
+Carlos A. Manzo — Matemáticas y Lógica
+</div>
+
+<div class="content-list">
+
+    <div class="content-item">
+        <h3>PRÓXIMAMENTE</h3>
+        <p>Material didáctico en preparación: Álgebra, Cálculo, Lógica Proposicional, Teoría de Conjuntos y Geometría Analítica.</p>
+        <p>Contenido disponible próximamente.</p>
+    </div>
+
+</div>
+
+<a href="../" class="back-link">← Volver al inicio</a>
+
+<footer>
+© 2026 Epsilon Noir — Tutorías
+</footer>
+
+</div>
+
+</body>
+</html>
