--- a/curanderia/index.html
+++ b/curanderia/index.html
@@ -11,7 +11,7 @@
 
 <div class="container">
 
-<h1>CURANDERÍA</h1>
+<h1>VINTAGE</h1>
 
 <div class="subtitle">
 Epsilon — Colección Vintage y Tesoros Raros
